manifests/kube-resources/nginx-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: example-daemonset
  labels:
    app: example
    test: edited-again-2
spec:
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
        this: hasbeenedited
    spec:
      containers:
      - name: example-container
        image: nginx:latest
